# libmath

./: .gitmodules  CMakeLists.txt
include/: ft_atoi.h  ft_filereader.h  ft_math.h
srcs/: ft_atoi.c  ft_filereader.c
